--- a/app-one/ingress.yaml
+++ b/app-one/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: dev
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/ssl-redirect: false
     # nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   # defaultBackend:
@@ -13,7 +14,7 @@ spec:
   #     port:
   #       number: 8080
   rules:
-  - host: kubernetes.docker.internal
+  # - host: kubernetes.docker.internal
     http:
       paths:
       - path: /one/?(.*)
