--- a/app-one/service.yaml
+++ b/app-one/service.yaml
@@ -4,9 +4,9 @@ metadata:
   name: test-first
   namespace: dev
 spec:
-  type: ClusterIP
   selector:
     app: test-first
   ports:
   - name: http
-    port: 8080
+    port: 80
+    targetPort: 80
