--- a/app-one/ingress.yaml
+++ b/app-one/ingress.yaml
@@ -4,8 +4,8 @@ metadata:
   name: app-one-ingress
   namespace: dev
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/ssl-redirect: false
+    kubernetes.io/ingress.class: nginx
+    # nginx.ingress.kubernetes.io/ssl-redirect: false
     # nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   # defaultBackend:
@@ -17,10 +17,10 @@ spec:
   # - host: kubernetes.docker.internal
     http:
       paths:
-      - path: /one/?(.*)
+      - path: /one
         pathType: Prefix
         backend:
           service:
             name: test-first
             port:
-              number: 8080
+              number: 80
