--- a/app-two/ingress.yaml
+++ b/app-two/ingress.yaml
@@ -4,8 +4,8 @@ metadata:
   name: app-two-ingress
   namespace: dev
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/ssl-redirect: false
+    kubernetes.io/ingress.class: nginx
+    # nginx.ingress.kubernetes.io/ssl-redirect: false
     # nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   # defaultBackend:
@@ -24,10 +24,10 @@ spec:
       #       name: test-first
       #       port:
       #         number: 8080
-      - path: /two/?(.*)
+      - path: /two
         pathType: Prefix
         backend:
           service:
             name: test-second
             port:
-              number: 8080
+              number: 3000
