--- a/app-one/ingress.yaml
+++ b/app-one/ingress.yaml
@@ -13,8 +13,8 @@ spec:
   #     name: test-second
   #     port:
   #       number: 8080
+  ingressClassName: nginx
   rules:
-  - host: "34.131.39.68"
     http:
       paths:
       - path: /one
