--- a/app-one/ingress.yaml
+++ b/app-one/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: dev
   annotations:
     kubernetes.io/ingress.class: nginx
-    # nginx.ingress.kubernetes.io/ssl-redirect: false
+    nginx.ingress.kubernetes.io/ssl-redirect: false
     # nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   # defaultBackend:
